--- a/client/src/components/header/styles.scss
+++ b/client/src/components/header/styles.scss
@@ -23,5 +23,40 @@
         margin: 0;
       }
     }
+
+    .callToAction {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      transform: translateY(-50%);
+
+      ul,
+      li {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        display: inline-block;
+        list-style-type: none;
+        margin-right: 1.5rem;
+
+        &:last-child {
+          margin-right: 2rem;
+        }
+
+        a,
+        span {
+          font-size: 1.8rem;
+          line-height: 1;
+          color: black;
+          text-decoration: none;
+          text-transform: uppercase;
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
