--- a/client/src/pages/homePage/styles.scss
+++ b/client/src/pages/homePage/styles.scss
@@ -1,10 +1,10 @@
-.homepage {
-  height: 110%;
-}
-
 // .homepage {
-//   height: calc(100% - 6.5rem - 5.8rem);
+//   height: 100%;
 // }
+
+.homepage {
+  height: calc(100% - 6.5rem - 5.8rem);
+}
 
 // .homepage {
 //   height: calc(100vh);
